src/test/deca/context/invalid/created/testMethCall/wrongParamMethCall.deca
class A{
    int x;
    void setX(int x){
        this.x = x;
    }
}
{
    float x;
    A a = new A();
    a.setX(x);
    println(a.x);
}